--- a/04_paperless_ngx.yml
+++ b/04_paperless_ngx.yml
@@ -1,18 +1,20 @@
 ---
 version: "2.1"
 services:
-  libreoffice:
-    image: lscr.io/linuxserver/libreoffice:latest
-    container_name: libreoffice
+  paperless-ngx:
+    image: lscr.io/linuxserver/paperless-ngx:latest
+    container_name: paperless-ngx
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Europe/Berlin
     volumes:
       - config:/config
+      - data:/data
     ports:
-      - 3000:3000
+      - 10002:8000
     restart: unless-stopped
     
 volumes:
   config:
+  data:
