--- a/06_nzbhydra2.yml
+++ b/06_nzbhydra2.yml
@@ -1,6 +1,24 @@
+#bonarr für pornos fehlt
 ---
 version: "2.1"
 services:
+    
+  nzbget:
+    image: lscr.io/linuxserver/nzbget:latest
+    container_name: nzbget
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+      #- NZBGET_USER=nzbget #optional
+      #- NZBGET_PASS=tegbzn6789 #optional
+    volumes:
+      - nzbget_config:/config
+      - nzbget_downloads:/downloads #optional
+    ports:
+      - 10010:6789
+    restart: unless-stopped
+
   nzbhydra2:
     image: lscr.io/linuxserver/nzbhydra2:latest
     container_name: nzbhydra2
@@ -9,12 +27,104 @@ services:
       - PGID=1000
       - TZ=Europe/Berlin
     volumes:
-      - config:/config
-      - downloads:/downloads
+      - nzbhydra2_config:/config
+      - nzbhydra2_downloads:/downloads
     ports:
-      - 10004:5076
+      - 10011:5076
     restart: unless-stopped
     
+  radarr:
+    image: lscr.io/linuxserver/radarr:latest
+    container_name: radarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+    volumes:
+      - radarr_config:/config
+      - radarr_movies:/movies #optional
+      - radarr_downloads:/downloads #optional
+    ports:
+      - 10012:7878
+    restart: unless-stopped
+
+sonarr:
+    image: lscr.io/linuxserver/sonarr:latest
+    container_name: sonarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+    volumes:
+      - sonarr_config:/config
+      - sonarr_tv:/tv #optional
+      - sonarr_downloads:/downloads #optional
+    ports:
+      - 10013:8989
+    restart: unless-stopped
+
+  lidarr:
+    image: lscr.io/linuxserver/lidarr:latest
+    container_name: lidarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+    volumes:
+      - lidarr_config:/config
+      - lidarr_music:/music #optional
+      - lidarr_downloads:/downloads #optional
+    ports:
+      - 10014:8686
+    restart: unless-stopped
+
+  mylar3:
+    image: lscr.io/linuxserver/mylar3:latest
+    container_name: mylar3
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+    volumes:
+      - mylar3_config:/config
+      - mylar3_comics:/comics
+      - mylar3_downloads:/downloads
+    ports:
+      - 10015:8090
+    restart: unless-stopped 
+
+  bazarr:
+    image: lscr.io/linuxserver/bazarr:latest
+    container_name: bazarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+    volumes:
+      - bazarr_config:/config
+      - bazarr_movies:/movies #optional
+      - bazarr_tv:/tv #optional
+    ports:
+      - 10016:6767
+    restart: unless-stopped   
+      
 volumes:
-  config:
-  downloads:
+  radarr_config:
+  radarr_movies:
+  radarr_downloads:
+  nzbget_config:
+  nzbget_downloads:
+  nzbhydra2_config:
+  nzbhydra2_downloads:
+  sonarr_config:
+  sonarr_tv:
+  sonarr_downloads:
+  lidarr_config:
+  lidarr_music:
+  lidarr_downloads:
+  mylar3_config:
+  mylar3_comics:
+  mylar3_downloads:
+  bazarr_config:
+  bazarr_movies:
+  bazarr_tv:
