--- a/07_samba.yml
+++ b/07_samba.yml
@@ -3,27 +3,14 @@ version: '3.4'
 services:
   samba:
     image: dperson/samba
+    container_name: samba
     environment:
       TZ: 'Europe/Berlin'
-    #networks:
-     # - default
     ports:
-      #- "137:137/udp"
-      #- "138:138/udp"
-      #- "139:139/tcp"
       - "445:445/tcp"
-    #read_only: true
-    #tmpfs:
-    #  - /tmp
     restart: unless-stopped
-    #stdin_open: true
-    #tty: true
     volumes:
       - /home/mark/samba/1:/mnt00:z
       - /home/mark/samba/2:/mnt01:z
-      #- /mnt:/mnt:z
-      #- /mnt2:/mnt2:z
-    command: '-s "Mount;/mnt00" -s "Marks Volume;/mnt00;yes;no;no;mark" -u "mark;caioe" -p'
-
-#networks:
-#  default:
+      - /home/mark/samba/3:/mnt02:z
+    command: '-u "mark;caioe" -u "jasmin;caioe" -s "Marks Volume;/mnt00;yes;no;no;mark" -s "JAzzs Volume;/mnt01;yes;no;no;jasmin -s "Public;/mnt02;yes;no;no;mark,jasmin -p'
